--- a/package.json
+++ b/package.json
@@ -8,11 +8,25 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.5",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "^5.7.6",
+    "@react-navigation/stack": "^5.9.3",
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
+    "react-native": "0.63.3",
+    "react-native-animatable": "^1.3.3",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-linear-gradient": "^2.5.6",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-screens": "~2.10.1",
+    "react-native-svg": "^12.1.0",
+    "react-native-swiper-flatlist": "^2.0.4",
+    "react-native-vector-icons": "^7.1.0",
+    "react-native-waveview": "^1.1.0",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
